# ClearCastFX

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  LICENSE  README.md  SECURITY.md  install.sh  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  remote-sign.yml
app/: CMakeLists.txt  control_panel.py  server.cpp  videofx_server.cpp  videofx_ui.py
scripts/: create-release.sh  install-remote.sh  push-to-ghcr.sh  vcam_openers_watcher.sh  vcam_watcher.sh
